--- a/app/src/main/res/layout/fragment_calculator_static.xml
+++ b/app/src/main/res/layout/fragment_calculator_static.xml
@@ -6,11 +6,52 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".CalculatorStaticActivityFragment">
+                tools:context=".CalculatorSingleFragment">
 
     <TextView
-        android:text="@string/hello_world"
+        android:text="SuPeR cAlcUlAtOr PLUS"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:textSize="25sp"
+        android:id="@+id/textView"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/first_operand"
+        android:hint="type first operand"
+        android:inputType="number"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/operation_selector"
+        android:layout_below="@+id/first_operand"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/second_operand"
+        android:hint="type second operand"
+        android:inputType="numberDecimal"
+        android:layout_below="@+id/operation_selector"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="RESULT:"
+        android:textSize="20sp"
+        android:id="@+id/result_text"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="45dp"
+        android:layout_centerVertical="true"/>
 
 </RelativeLayout>
